# learning_rust

./: Cargo.toml  README.md
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
async-chat/: Cargo.toml
async-chat/src/: lib.rs  utils.rs
asynchronous_programming/: Cargo.toml
asynchronous_programming/src/: custom_future.rs  main.rs
closures/src/: callbacks.rs  closure.rs  main.rs
collections/: Cargo.toml
collections/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: channels.rs  index.rs  main.rs  shared_state.rs
enums_and_patterns/src/: enums.rs  main.rs  patterns.rs
error_handling/src/: main.rs
expressions/: Cargo.toml
expressions/src/: main.rs
foreign_functions/: Cargo.toml  build.rs
foreign_functions/src/: libgit2.rs  main.rs
foreign_functions/src/git/: mod.rs  raw.rs
fundamental-types/: Cargo.toml
fundamental-types/src/: main.rs
initial/src/: main.rs
input_and_output/: Cargo.toml
input_and_output/src/: main.rs  network.rs  readers.rs  writers.rs
iterators/: Cargo.toml
iterators/src/: consumingiters.rs  customiters.rs  iters.rs  main.rs  moreiters.rs
macros/src/: json.rs  main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
operator_overloading/src/: main.rs
ownership_and_moves/src/: main.rs
quickreplace/: Cargo.toml
quickreplace/src/: main.rs
ranges/src/: lib.rs
references/src/: main.rs
src/: main.rs
strings_and_text/: Cargo.toml
strings_and_text/src/: main.rs
structs/src/: main.rs  polynomial.rs  queue.rs
traits_and_generics/src/: main.rs  traits.rs
unsafe_code/src/: gap_buffer.rs  main.rs  my_ascii.rs  ref_with_flag.rs
utitlity_traits/: Cargo.toml
utitlity_traits/src/: deref.rs  drop.rs  main.rs  sized.rs
