
[workspace]
members = [
    "actix-gcd",
    "initial",
    "mandelbrot",
    "quickreplace",
    "fundamental-types",
    "ownership_and_moves",
    "references",
    "expressions",
    "error_handling",
    "ranges",
    "structs",
    "enums_and_patterns",
    "traits_and_generics",
    "operator_overloading",
    "utitlity_traits",
    "closures",
    "iterators",
    "collections",
    "strings_and_text",
    "input_and_output",
    "concurrency"
]
