[package]
name = "async-chat"
version = "0.1.0"
authors = ["Krishna Addepalli <coolkrishna31@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1", features = ["unstable"]}
tokio = {version ="1", features = ["sync"]}
serde = {version="1", features = ["derive", "rc"]}
serde_json="1"

