[package]
name = "asynchronous_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["unstable"]}
surf = "2.0"
waker-fn = "1.1.0"
futures-lite = "1.12.0"
crossbeam = "0.8.1"
