[package]
name = "input_and_output"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate3 = "0.1.21"
serde = "1.0.147"
serde_json = "1.0.87"
reqwest = {version="0.11.12", features = ["blocking"]}
